Allow email to be mixed case. Fixed new user link. Grey out save buttons on attendance during network. Fix no photo icon. Fix table width/spacing.

--- a/src/main/js/angular/styles.css
+++ b/src/main/js/angular/styles.css
@@ -45,3 +45,7 @@
 .attendance_S {
     color: #eb39b9;
 }
+
+table.mat-table {
+    width: 100%;
+}
